--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,5 @@
 # # Maven
+
 # # Build your Java project and run tests with Apache Maven.
 # # Add steps that analyze code, save build artifacts, deploy, and more:
 # # https://docs.microsoft.com/azure/devops/pipelines/languages/java
@@ -38,9 +39,8 @@ steps:
     collectBuildInfo: true
     buildName: '$(Build.DefinitionName)'
     buildNumber: '$(Build.BuildNumber)'
-    includeEnvVars: true
-    javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.7'
+    javaHomeOption: 'Path'
+    jdkDirectory: '/usr/lib/jvm/zulu-7-amd64'
 
 # trigger:
 # - master
